--- a/public/client.html
+++ b/public/client.html
@@ -317,6 +317,41 @@
             color: #fff;
         }
 
+        .detail-actions {
+            margin-top: 20px;
+            padding-top: 15px;
+            border-top: 1px solid #eee;
+            display: flex;
+            justify-content: center;
+        }
+
+        #share-event-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 10px 20px;
+            border: 1px solid #007bff;
+            color: #007bff;
+            background-color: transparent;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            font-weight: 600;
+            transition: background-color 0.2s, color 0.2s;
+        }
+
+        #share-event-btn:hover {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        #share-event-btn:disabled {
+            background-color: #28a745;
+            border-color: #28a745;
+            color: #fff;
+            cursor: default;
+        }
+
         #scroll-to-top-btn {
             position: absolute;
             bottom: 20px;
@@ -822,6 +857,9 @@
             const loadingOverlay = document.getElementById('loading-overlay');
             const scrollToTopBtn = document.getElementById('scroll-to-top-btn');
 
+            const urlParams = new URLSearchParams(window.location.search);
+            const eventIdFromUrl = urlParams.get('event');
+
             const isDesktop = () => window.matchMedia('(min-width: 769px)').matches;
             let isListPanelOpen = false;
             let allEvents = [];
@@ -1032,13 +1070,50 @@
                         <p><strong>Where:</strong> ${event.address}</p>
                         <p>${event.description}</p>
                         <div class="mini-pills-container" style="margin-top: 15px;">${saleTypePill}${categoryPills}</div>
+                        <div class="detail-actions">
+                            <button id="share-event-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg>
+                                <span>Share</span>
+                            </button>
+                        </div>
                     </div>
                 `;
+
+                document.getElementById('share-event-btn').addEventListener('click', () => shareEvent(event));
 
                 if (!isDesktop()) {
                     listPanel.classList.add('detail-open');
                 }
                 detailPanel.classList.add('open');
+            }
+
+            function shareEvent(event) {
+                const eventUrl = `${window.location.origin}${window.location.pathname}?event=${event.id}`;
+                const shareData = {
+                    title: `Garage Sale: ${event.title}`,
+                    text: `Check out this garage sale: ${event.description.substring(0, 100)}...`,
+                    url: eventUrl,
+                };
+
+                if (navigator.share) {
+                    navigator.share(shareData).catch((error) => console.error('Error sharing event:', error));
+                } else {
+                    navigator.clipboard.writeText(eventUrl).then(() => {
+                        const shareBtn = document.getElementById('share-event-btn');
+                        if (shareBtn) {
+                            const originalContent = shareBtn.innerHTML;
+                            shareBtn.innerHTML = 'Link Copied!';
+                            shareBtn.disabled = true;
+                            setTimeout(() => {
+                                shareBtn.innerHTML = originalContent;
+                                shareBtn.disabled = false;
+                            }, 2000);
+                        }
+                    }).catch(err => {
+                        console.error('Failed to copy event link: ', err);
+                        alert('Could not copy link to clipboard.');
+                    });
+                }
             }
 
             function closeDetailPanel() {
@@ -1424,6 +1499,18 @@
                     filterAndDisplayEvents(); // Display all events initially
                     updateDebugOverlay();
                     loadingOverlay.classList.add('hidden');
+
+                    // Handle deep-linking from a shared URL
+                    if (eventIdFromUrl) {
+                        const eventToOpen = allEvents.find(e => e.id == eventIdFromUrl);
+                        if (eventToOpen) {
+                            setTimeout(() => {
+                                openDetailPanel(eventToOpen.id);
+                                const cleanUrl = window.location.protocol + "//" + window.location.host + window.location.pathname;
+                                window.history.replaceState({ path: cleanUrl }, '', cleanUrl);
+                            }, 500);
+                        }
+                    }
                 })
                     .catch(error => {
                         console.error('Error fetching data:', error);
