--- a/public/client.html
+++ b/public/client.html
@@ -23,11 +23,12 @@
         }
 
         #map {
+            height: 100%;
             width: 100%;
-            position: relative;
+            position: static;
             z-index: 1;
-            transition: width 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), left 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), height 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-            flex-grow: 1;
+            transition: width 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), margin-left 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), height 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+            flex-grow: 1; 
         }
 
         .panel {
@@ -954,12 +955,12 @@
 
             #map {
                 width: 75%;
-                left: 25%;
+                margin-left: 25%;
             }
 
             #map.panel-closed {
                 width: 100%;
-                left: 0;
+                margin-left: 0;
             }
 
             .panel {
@@ -975,6 +976,7 @@
             }
 
             #list-panel {
+                position: fixed;
                 height: 100%;
                 transform: translateX(0);
                 transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.4s ease;
