--- a/public/client.html
+++ b/public/client.html
@@ -1589,11 +1589,56 @@
                 }
             });
 
-            listPanelHeader.addEventListener('click', () => {
-                if (isDesktop()) return; // No click-to-toggle on desktop
-                isListPanelOpen = !isListPanelOpen;
-                listPanel.classList.toggle('open', isListPanelOpen);
-            });
+            // --- Mobile Panel Drag-to-Open/Close ---
+            let touchStartY = 0;
+            let initialPanelHeight = 0;
+            let wasPanelDragged = false;
+
+            const onPanelTouchStart = (e) => {
+                if (isDesktop()) return;
+                touchStartY = e.touches[0].clientY;
+                initialPanelHeight = listPanel.offsetHeight;
+                listPanel.style.transition = 'none'; // Disable transition for smooth dragging
+                wasPanelDragged = false;
+                window.addEventListener('touchmove', onPanelTouchMove, { passive: false });
+                window.addEventListener('touchend', onPanelTouchEnd);
+            };
+
+            const onPanelTouchMove = (e) => {
+                e.preventDefault(); // Prevent page scroll while dragging panel
+                const currentY = e.touches[0].clientY;
+                const deltaY = touchStartY - currentY; // Upward drag is positive delta
+                let newHeight = initialPanelHeight + deltaY;
+
+                // Clamp the height between collapsed (90px) and open (75vh)
+                const minHeight = 90;
+                const maxHeight = window.innerHeight * 0.75;
+                newHeight = Math.max(minHeight, Math.min(newHeight, maxHeight));
+
+                listPanel.style.height = `${newHeight}px`;
+                wasPanelDragged = true;
+            };
+
+            const onPanelTouchEnd = () => {
+                window.removeEventListener('touchmove', onPanelTouchMove);
+                window.removeEventListener('touchend', onPanelTouchEnd);
+
+                listPanel.style.transition = ''; // Re-enable CSS transition for snapping
+
+                // If it was just a tap, not a drag, toggle the state
+                if (!wasPanelDragged) {
+                    isListPanelOpen = !isListPanelOpen;
+                    listPanel.classList.toggle('open', isListPanelOpen);
+                } else {
+                    // Snap open or closed based on a threshold
+                    const currentHeight = listPanel.offsetHeight;
+                    isListPanelOpen = currentHeight > window.innerHeight * 0.3;
+                    listPanel.classList.toggle('open', isListPanelOpen);
+                }
+                listPanel.style.height = ''; // Let CSS class handle the final height with transition
+            };
+
+            listPanelHeader.addEventListener('touchstart', onPanelTouchStart);
 
             qrContainer.addEventListener('click', () => {
                 qrModal.style.display = 'flex';
