--- a/public/client.html
+++ b/public/client.html
@@ -13,7 +13,8 @@
     <style>
         html,
         body {
-            height: 100%;
+            height: 100vh;
+            width: 100vw;
             margin: 0;
             padding: 0;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -69,7 +70,7 @@
         }
 
         .panel-header {
-            padding: 10px 20px;
+            padding: 25px 20px 10px;
             display: flex;
             align-items: center;
     text-align: center;
@@ -88,11 +89,15 @@
         }
 
         .panel-handle {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
             width: 40px;
             height: 5px;
             background-color: #c0c0c0;
             border-radius: 2.5px;
-    margin: 0 auto 10px;
+            margin: 0;
         }
 
         .panel-title {
@@ -1082,6 +1087,7 @@
                 cursor: default;
                 /* No dragging on desktop */
                 margin-bottom: 0;
+                padding: 10px 20px;
             }
 
             #collapse-button {
@@ -1918,8 +1924,11 @@
                     } else {
                         lastSelectedPosition = position;
                         smoothPanTo(position, 300, () => {
-                            map.setZoom(13);
                             // After centering, pan the map so the pin is centered in the *visible* map area,
+                            // Only zoom in if the map is currently zoomed out too far.
+                            if (map.getZoom() < 13) {
+                                map.setZoom(13);
+                            }
                             // accounting for the detail panel that slides up from the bottom.
                             const mapHeight = mapElement.offsetHeight;
                             const detailPanelHeight = detailPanel.offsetHeight;
@@ -2380,6 +2389,14 @@
                     } else {
                         // Otherwise, fit all the points in the view.
                         map.fitBounds(bounds, 150);
+                        // On mobile, prevent zooming out too far after filtering.
+                        if (!isDesktop()) {
+                            google.maps.event.addListenerOnce(map, 'idle', () => {
+                                if (map.getZoom() < 13) {
+                                    map.setZoom(13);
+                                }
+                            });
+                        }
                     }
                 }
                 updateDebugOverlay();
@@ -2778,5 +2795,6 @@
         }
     </script>
 </body>
+
 
 </html>
