--- a/public/client.html
+++ b/public/client.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upcoming Garage Sales Map</title>
+    <link rel="stylesheet" href="/css/shared.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#007bff">
     <meta name="mobile-web-app-capable" content="yes">
@@ -29,7 +30,7 @@
             position: static;
             z-index: 1;
             transition: width 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), margin-left 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), height 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-            flex-grow: 1; 
+            flex-grow: 1;
         }
 
         .panel {
@@ -73,11 +74,11 @@
             padding: 25px 20px 10px;
             display: flex;
             align-items: center;
-    text-align: center;
+            text-align: center;
             cursor: pointer;
             margin-bottom: 45px;
             transition: margin-bottom 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-    position: relative;
+            position: relative;
         }
 
         #list-panel .panel-header {
@@ -104,7 +105,7 @@
             font-size: 1.2rem;
             flex-grow: 1;
             font-weight: 600;
-    margin: 0;
+            margin: 0;
         }
 
         .header-action-btn {
@@ -114,10 +115,10 @@
             padding: 5px;
             color: #555;
             line-height: 1;
-    position: absolute;
-    right: 20px;
-    /* Align with title: 10px padding + 5px handle + 10px margin */
-    top: 25px;
+            position: absolute;
+            right: 20px;
+            /* Align with title: 10px padding + 5px handle + 10px margin */
+            top: 23px;
         }
 
         #collapse-button {
@@ -190,11 +191,13 @@
             white-space: nowrap;
             overflow-x: auto;
             -webkit-overflow-scrolling: touch;
-            scrollbar-width: none; /* For Firefox */
+            scrollbar-width: none;
+            /* For Firefox */
         }
 
         .pills-container::-webkit-scrollbar {
-            display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+            display: none;
+            /* Hide scrollbar for Chrome, Safari, and Opera */
             height: 8px;
         }
 
@@ -512,142 +515,6 @@
             border-color: #aaa;
         }
 
-        .modal-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.6);
-            z-index: 1000;
-            display: none;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .modal-overlay.visible {
-            display: flex;
-        }
-
-        .modal-content {
-            background-color: #fff;
-            padding: 20px 30px;
-            border-radius: 8px;
-            width: 90%;
-            max-width: 500px;
-            max-height: 90vh;
-            overflow-y: auto;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .modal-content h2 {
-            margin-top: 0;
-            margin-bottom: 25px;
-            text-align: center;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: 600;
-            font-size: 0.9rem;
-        }
-
-        .form-group input[type="text"],
-        .form-group input[type="datetime-local"],
-        .form-group textarea,
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 1rem;
-            box-sizing: border-box;
-        }
-
-        .form-row {
-            display: flex;
-            gap: 20px;
-        }
-
-        .form-row .form-group {
-            flex: 1;
-        }
-
-        .checkbox-group {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            gap: 10px;
-            border: 1px solid #ccc;
-            padding: 10px;
-            border-radius: 4px;
-            max-height: 150px;
-            overflow-y: auto;
-        }
-
-        .checkbox-group label {
-            font-weight: normal;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .radio-group {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .radio-group label {
-            font-weight: normal;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            cursor: pointer;
-        }
-
-        .form-actions {
-            display: flex;
-            justify-content: flex-end;
-            gap: 10px;
-            margin-top: 25px;
-        }
-
-        .form-actions button {
-            padding: 10px 20px;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-            font-weight: 600;
-            transition: background-color 0.2s;
-        }
-
-        .form-actions .btn-primary { background-color: #007bff; color: white; }
-        .form-actions .btn-primary:hover { background-color: #0056b3; }
-        .form-actions .btn-secondary { background-color: #6c757d; color: white; }
-        .form-actions .btn-secondary:hover { background-color: #5a6268; }
-        .form-actions button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-
-        .error-message {
-            color: #dc3545;
-            font-size: 0.8rem;
-            margin-top: 4px;
-        }
-
-        .form-group input.is-invalid,
-        .form-group textarea.is-invalid,
-        .form-group select.is-invalid,
-        .form-group .checkbox-group.is-invalid {
-            border-color: #dc3545;
-        }
-
         #photo-upload-group {
             display: flex;
             align-items: center;
@@ -827,7 +694,8 @@
             stroke: #666;
         }
 
-        .favorite-btn.active svg, #detail-favorite-btn.active svg {
+        .favorite-btn.active svg,
+        #detail-favorite-btn.active svg {
             fill: #ff4757;
             stroke: #ff4757;
         }
@@ -970,6 +838,7 @@
             0% {
                 transform: rotate(0deg);
             }
+
             100% {
                 transform: rotate(360deg);
             }
@@ -1213,7 +1082,8 @@
         </svg>
     </div>
 
-    <div id="detail-panel" class="panel" role="dialog" aria-modal="true" aria-labelledby="detail-title" aria-hidden="true">
+    <div id="detail-panel" class="panel" role="dialog" aria-modal="true" aria-labelledby="detail-title"
+        aria-hidden="true">
         <div class="panel-header">
             <button id="detail-back-button" aria-label="Close event details" title="Close event details">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -1224,7 +1094,12 @@
             <div class="panel-handle"></div>
             <h1 id="detail-title" class="panel-title"></h1>
             <button id="detail-favorite-btn" class="favorite-btn" aria-label="Toggle favorite">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path
+                        d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+                    </path>
+                </svg>
             </button>
         </div>
         <div id="detail-content" class="panel-content"></div>
@@ -1293,7 +1168,7 @@
                             Information</label>
                         <label><input type="radio" name="reason" value="spam"> Spam or Scam</label>
                         <label><input type="radio" name="reason" value="inappropriate"> Inappropriate Content</label>
-                        <label><input type="radio" name="reason" value="cancelled"> Event is Cancelled</label>
+                        <label><input type="radio" name="reason" value="cancelled"> Event is not happening/ended</label>
                         <label><input type="radio" name="reason" value="other"> Other (please specify)</label>
                     </div>
                 </div>
@@ -2421,7 +2296,7 @@
                     glyphColor: '#ffffff',
                     scale: 1.3, // Make it slightly larger than default
                 }).element;
-                
+
                 map = new Map(document.getElementById('map'), {
                     center: { lat: 45.345, lng: -75.760 }, // Default to Ottawa
                     zoom: 12,
